# gsh

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  gnuish.c  gnuish.h  gnuish.sln  gsh.sln  main.c  main.cpp  shell-experiment.sln  shell-experiment.vcxproj
gnuish/: .clang-format  Makefile  README.md  builtin.c  builtin.h  gnuish.c  gnuish.h  gnuish.vcxproj  gnuish.vcxproj.filters  history.h  main.c
gnuish/src/: builtin.c  builtin.h  gnuish.c  gnuish.h  history.c  history.h  main.c  parse.c  parse.h  process.h  system.h
gsh/: Makefile  gsh.vcxproj  gsh.vcxproj.filters
gsh/src/: builtin.c  builtin.h  gsh.c  gsh.h  history.c  history.h  input.h  main.c  parse.c  parse.h  process.h  special.def
hooks/: pre-commit
include/: builtin.h  gsh.h  input.h  lexer.h  params.h  parse.h  special.def.h
shell-experiment/: .clang-format  gnuish.c  gnuish.h  main.c  shell-experiment.vcxproj
src/: builtin.c  gsh.c  history.c  input.c  lexer.c  main.c  parse.c  special.def  special.def.c
